# katzenpost-wt

./: .gitignore  go.mod  go.sum
cmd/genconfig/: main.go
core/genconfig/: genconfig.go
core/pki/: descriptor.go  descriptor_test.go  document.go
docker/: Dockerfile.alpine-base  Makefile
docs/security/: webtransport-adversarial-test-report.md
server/: server.go
server/config/: config.go
server/internal/gateway/: gateway.go
server/internal/glue/: glue.go
server/internal/incoming/: webtransport.go  webtransport_test.go
server/internal/pki/: pki.go
wasm/katzenpost-wasm-client/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
wasm/katzenpost-wasm-client/scripts/: live-smoke.mjs
wasm/katzenpost-wasm-client/src/: lib.rs
wasm/katzenpost-wasm-client/web/: index.html  index.ts  main.ts  vite.config.js
