[package]
name = "katzenpost-wasm-client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
aes = "0.8"
blake2 = "0.10"
ctr = "0.9"
ed25519-dalek = "2"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
wasm-bindgen = "0.2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zears = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[patch.crates-io]
zears = { path = "vendor/zears" }
